src/Dialog/index.scss
.nds-shim--dark {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: var(--bgColor-scrimDark);
  display: flex;
  justify-content: center;
  align-items: flex-start;
  min-height: 100vh;
  z-index: 3;

  // create spaces around viewport edges for tablet or larger
  @include atMediaUp("s") {
    padding: var(--space-default);
    padding-top: 120px;
  }
}

.nds-dialog-transition-appear {
  opacity: 0;
}

.nds-dialog-transition-appear-done {
  opacity: 1;
  transition: opacity 200ms;
}

.nds-dialog-transition-exit {
  opacity: 1;
}

.nds-dialog-transition-exit-active {
  opacity: 0;
  transition: opacity 200ms;
}

.nds-dialog {
  position: relative;
  background-color: var(--bgColor-white);
  box-shadow: var(--elevation-high);
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;

  // the modal dialog takes over the whole screen by default
  // (small veiwports)
  height: 100vh;
  width: 100vw;

  // for tablet or larger, display the modal dialog as a floating box.
  @include atMediaUp("s") {
    height: auto !important;
    border-radius: var(--border-radius-m);
    max-height: 80vh; // prevent modal from being taller than the shim content box
    min-width: 240px; // should be no narrower than this on larger viewports
    width: var(--dialog-preferred-width);
  }
}

.nds-dialog-header {
  margin: 0 var(--space-xl);
  padding-top: var(--space-xl);
  padding-bottom: var(--space-xxs);

  h4 {
    margin: 0;
    padding: 0;
    font-family: var(--font-family-default);
    font-size: var(--font-size-l);
    color: var(--font-color-heading);
  }
}

.nds-dialog-header--bordered {
  border-bottom: var(--border-size-m) solid var(--theme-primary);
}

.nds-dialog-header--banner {
  background-color: var(--theme-primary);
  color: white;
  margin: 0 0;
  padding: 0 var(--space-s) 0 var(--space-s);
  @include atMediaUp("s") {
    border-radius: var(--border-radius-m) var(--border-radius-m) 0 0;
  }
}

.nds-dialog-closeButton {
  position: absolute;
  font-size: var(--font-size-l) !important;
  color: var(--font-color-primary);
  right: var(--space-m);
  top: var(--space-m);
}

.nds-dialog-closeButton--banner {
  color: white !important;
}

.nds-dialog-header,
.nds-dialog-footer {
  flex-basis: auto;
  flex-grow: 0;
  height: initial;
}

.nds-dialog-content {
  padding: 0 var(--space-xl);
  overflow-y: auto;
  flex-grow: 1;
}

.nds-dialog-footer {
  margin: 0 var(--space-xl) var(--space-xl);
  padding-top: var(--space-default);
}

.nds-dialog-footer--overflowing {
  position: relative;

  &::before {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: -20px;
    /* stack on top of footer border */
    height: 20px;
    background-image: linear-gradient(
      to top,
      var(--color-white),
      RGBA(var(--rgb-white), 0.33)
    );
  }
}

